<resources>
    <string name="app_name">Pet Tracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu">Menu</string>
    <string name="error_login">Wrong username/password combination</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="zones">Zones</string>
    <string name="tracker">Trackers</string>
    <string name="gps">GPS</string>
    <string name="circle_zone">Circle zone</string>
    <string name="square_zone">Square zone</string>
    <string name="delete_zone_desc">Do you want to delete this zone?</string>
    <string name="delete_zone_title">Delete</string>
    <string name="delete_tracker_desc">Do you want to unlink this tracker?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="logout_desc">Do you really want to logout?</string>
    <string name="add_tracker">Add a tracker</string>
    <string name="add_tracker_name">Enter a tracker name</string>
    <string name="no">No</string>
    <string name="add_tracker_pin">Enter pin number</string>
    <string name="link">Link</string>
    <string name="register">Register</string>
    <string name="username_used">Username already used</string>
    <string name="minimum_characters">Minimum of 4 characters</string>
    <string name="alerts">Alerts</string>
    <string name="notification_phone">Phone Notifications</string>
    <string name="notification_sms">SMS Notifications</string>
    <string name="notification_email">Email Notifications</string>
</resources>
