<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_gps" android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/gps" android:checked="true"/>
        <item android:id="@+id/nav_tracker" android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/tracker" />
        <item android:id="@+id/nav_zones" android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/zones" />
        <item android:id="@+id/alerts" android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/alerts" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_delete"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>