<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/alert_notification"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/gen_black_sel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/notification_phone"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/alert_notification_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/white_checkbox" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/alert_sms"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/gen_black_sel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/notification_sms"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/alert_sms_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/white_checkbox" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/alert_email"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/gen_black_sel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/notification_email"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/alert_email_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/white_checkbox" />
    </RelativeLayout>


</LinearLayout>